# cmake-template-creater

./: CMakeLists.txt  README.md
include/: commands.h  file_utils.h
prompts/: base.txt  modify_subcommands.txt  requires_cmake_toochain_file_support.txt
src/: main.cpp
src/commands/: apply_command.cpp  init_command.cpp  install_command.cpp  list_command.cpp  run_command.cpp  uninstall_command.cpp
src/utils/: file_utils.cpp
